changed local dirname and updated readme

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Gosocket</title>
+    <title>Criceti</title>
     <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="websockets with go"/>
+    <meta name="description" content="A hamster chat room."/>
     <meta name="author" content="Daniel Kermode"/>
     <meta charset="UTF-8">
     <!--google analytics-->
