--- a/public/room.html
+++ b/public/room.html
@@ -10,11 +10,9 @@
     <!--google analytics end-->
   </head>
   <body>
-    <h1>Ciao, criceto! What's your name?</h1>
-
-    <form action="/register" method="POST">
-    <div><input name="body" rows="20" cols="80"></input></div>
-    <div><input type="submit" value="Save"></div>
-    </form>
+    <div id="container">
+      <div id="app"></div>
+    </div>
+    <script src="/resources/bundle.js" type="text/javascript"></script>
   </body>
 </html>
