--- a/public/room.html
+++ b/public/room.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Criceti</title>
+    <link rel='stylesheet' href='/resources/css/bootstrap.min.css' />
     <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="A hamster chat room."/>
     <meta name="author" content="Daniel Kermode"/>
@@ -10,7 +11,7 @@
     <!--google analytics end-->
   </head>
   <body>
-    <div id="container">
+    <div class="container" id="container">
       <div id="app"></div>
     </div>
     <script src="/resources/bundle.js" type="text/javascript"></script>
